--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -412,7 +412,7 @@ fields:
   - Are you employed?: employed
     datatype: yesnoradio
 ---
-#################################JOBS
+#################################JOBS##############################
 ---
 id: employer
 generic object: ALItemizedJob
@@ -459,7 +459,7 @@ fields:
       variable: x.is_self_employed
       is: False
 ---
-id: itemized job period
+id: job period
 generic object: ALItemizedJob
 question: |
   Details about the ${ x.source } job
@@ -505,7 +505,7 @@ fields:
 
 
 ---
-id: itemized job line items
+id: job hourly pay or salary wages
 generic object: ALItemizedJob
 question: |
     Your pay at the ${ x.source } job
@@ -514,7 +514,7 @@ fields:
         % if x.is_hourly:
         What is your hourly pay for this job?
         % else:
-        What are your wages for this job?
+        What is your salary for this job?
         % endif
       field: x.to_add['full time'].value
       datatype: currency
@@ -524,26 +524,17 @@ fields:
         % if x.is_hourly:
         What is your hourly pay for this job?
         % else:
-        What are your wages for this job?
+        What is your salary for this job?
         % endif
       field: x.to_add['part time'].value
       datatype: currency
       show if:
         code: x.is_part_time is True
-    #- Did the job have other income like tips, commissions or bonuses in the last month?: tips_commissions
-    #  datatype: yesnoradio
-    #- Which of these do you have: x.which_tips_commissions
-    #  datatype: checkboxes
-    #  choices:
-    #    - Tips: tips
-    #    - Commissions: commissions
-    #    - Bonuses: bonuses
-    #  show if: tips_commissions
-    #- How much do you get in tips, commissions or bonuses? (Q2): x.to_add['tips_commissions'].value
-    #  datatype: currency
-    #  show if: tips_commissions
+    - Do you have another source of income from this job, like tips, commissions or bonuses?: x.to_add.there_are_any
+      datatype: yesnoradio
+
 ---
-id: other itemized job income value
+id: job additional income or subtractions from pay like tips
 generic object: ALItemizedJob
 question: |
   Extra income or deductions from the ${ x.source } job
@@ -554,7 +545,19 @@ fields:
   - Do you have anything you should subtract from your pay?: x.to_subtract.there_are_any
     datatype: yesnoradio
 ---
-#id: other itemized job income name
+#variable name: job_items_names
+#data:
+#  full time: Full time wages
+#  part time: Part time wages
+#  tips: Tips
+#  commissions: Commissions
+#  bonuses: Bonuses
+  #federal_taxes: Federal taxes
+  #state_taxes: State taxes
+  #social_security: Social security
+  #medicare: Medicare
+---
+id: job additional income details
 generic object: ALItemizedJob
 question: |
   Other incomes from the ${ x.source } job
@@ -567,21 +570,6 @@ fields:
 validation code: |
   if x.to_add.new_item_name in x.to_add.complete_elements().keys():
     validation_error(f'You already told us about your <strong>{ job_items_names.get(x.to_add.new_item_name, x.to_add.new_item_name) }</strong> that pays { currency( x.to_add[ x.to_add.new_item_name ].value )}. Pick a different name.')
----
-id: other itemized job income value
-generic object: ALItemizedJob
-question: |
-  How much do you get paid in ${ job_items_names.get(i, i) } at the ${ x.source } job?
-fields:
-  - Amount: x.to_add[i].value
-    datatype: currency
-  - How often do you get paid this amount?: x.to_add[i].times_per_year
-    input type: radio
-    code: |
-      times_per_year_list
-    datatype: integer
-  - Do you have other income from the ${ x.source } job?: x.to_add.there_is_another
-    datatype: yesnoradio
 ---
 id: job review
 question: |
